--- a/markdown-summary/1.md
+++ b/markdown-summary/1.md
@@ -1,8 +1,110 @@
-## 헤더Headers
-* 큰제목: 문서 제목
-    ```
-    This is an H1
-    =============
-    ```
-    This is an H1
-    =============
+# 1. 마크다운 문법
+
+## 1.1. 링크
+* 참조링크
+
+```
+[참고 키워드][변수]
+
+[변수]: URL "보여줄 것"
+
+* 외부링크
+```
+사용문법: [링크 가는 곳](링크, "보여줄 것")
+```
+Link: [Google](https://google.com, "google link")
+```
+## 1.2. 강조
+```
+* *글*
+* _글_
+* **글**
+* __글__
+* ~~글~~
+
+```
+## 1.3. 이미지
+
+![이미지 이름](URL "안보일경우 출력할 텍스트)
+
+사이즈 조절 기능은 없음 필요시 HTML을 이용한다.
+
+## 2.1. 헤더Headers
+
+* #1~6까지만 지원
+# #1개 H1
+## #2개 H2
+### #3개 H3
+#### #4개 H4
+##### #5개 H5
+###### #6개 H6
+
+## 2.2. BlockQuote
+```>``` 을 이용한다.
+```
+> >1개
+>	> >2개
+>	>	> >3개
+```
+
+## 2.3. 목록
+### ● 순서있는 목록(번호)
+순서있는 목록은 숫자와 점을 사용한다.
+```
+1. 1.첫번째
+2. 2.두번째
+3. 3.세번째
+```
+
+
+**어떤 번호를 입력해도 순서는 내림차순으로 정의됩니다.**
+```
+1. 1.첫번째
+3. 3.세번째
+2. 2.두번째
+```
+
+### ● 순서없는 목록(글머리 기호: `*`, `+`, `-` 지원)
+```
+* 빨강
+  * 녹색
+    * 파랑
+
++ 빨강
+  + 녹색
+    + 파랑
+
+- 빨강
+  - 녹색
+    - 파랑
+```
+
+혼합도 가능합니다.
+```
+* 1단계
+  - 2단계
+    + 3단계
+      + 4단계
+```
+
+## 2.4. 코드 알려주는 방법(목록으로)
+4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속됩니다.
+
+### 2.4.1. 들여쓰기
+```
+들여쓰면
+
+    이렇게 됩니다.
+    
+이는 한줄을 쓰면 두번 다음열로 넘어가야 합니다.
+```
+
+## 2.5. 수평선 ```HTML에서는 <hr/>```
+
+```
+*****
+>   (*3개 이상)
+---
+>   (-3개 이상)
+```
+
