--- a/명령어/1.md
+++ b/명령어/1.md
@@ -1,3 +1,14 @@
+## add, commit, log, show
+1. add
+> add : 워킹 디렉터리의 파일을 스테이지 영역으로 등록
+> > $ git add <파일이름>
 
-> add
-> add >
+2. commit
+> commit : HEAD가 가리키는 커밋의 스테이지 영역을 스냅샷 방식으로 저장
+> > $ git commit
+
+2.1. 커밋 메시지
+구
+
+3. log
+> log : 
