--- a/markdown-summary/1.md
+++ b/markdown-summary/1.md
@@ -25,13 +25,13 @@ Link: [Google](https://google.com, "google link")
 ```
 ## 1.3. 이미지
 
-![이미지 이름](URL "안보일경우 출력할 텍스트)
+![안보일경우 출력할 텍스트](URL "링크를 설명할트텍스트")
 
 사이즈 조절 기능은 없음 필요시 HTML을 이용한다.
 
-## 2.1. 헤더Headers
+## 2.1. HTML의 헤더Headers
 
-* #1~6까지만 지원
+* #1~6개 까지만 사용이 가능.
 # #1개 H1
 ## #2개 H2
 ### #3개 H3
@@ -39,8 +39,8 @@ Link: [Google](https://google.com, "google link")
 ##### #5개 H5
 ###### #6개 H6
 
-## 2.2. BlockQuote
-```>``` 을 이용한다.
+## 2.2. HTML의 BlockQuote
+```>``` 을 이용
 ```
 > >1개
 >	> >2개
@@ -48,8 +48,7 @@ Link: [Google](https://google.com, "google link")
 ```
 
 ## 2.3. 목록
-### ● 순서있는 목록(번호)
-순서있는 목록은 숫자와 점을 사용한다.
+### ● 순서가 필요한 목록
 ```
 1. 1.첫번째
 2. 2.두번째
@@ -64,7 +63,7 @@ Link: [Google](https://google.com, "google link")
 2. 2.두번째
 ```
 
-### ● 순서없는 목록(글머리 기호: `*`, `+`, `-` 지원)
+### ● 순서가 는필요없는 목록( `*`, `+`, `-` 지원)
 ```
 * 빨강
   * 녹색
